--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "antd": "^5.25.1",
+    "framer-motion": "^12.12.1",
+    "next": "^15.3.2",
+    "next-plugin-antd-less": "^1.8.0",
+    "next-transpile-modules": "^10.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
